[gd_scene load_steps=3 format=3 uid="uid://dw5aljuct41el"]

[ext_resource type="Script" path="res://Scripts/Pickup/pickup.gd" id="1_hugsq"]
[ext_resource type="PackedScene" uid="uid://dqqybgtg1psqo" path="res://Scenes/DebugScenes/position_debug_label.tscn" id="2_dskww"]

[node name="PickupArea" type="Area2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource("1_hugsq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PositionDebugLabel" parent="." instance=ExtResource("2_dskww")]
visible = false
offset_left = -76.0
offset_top = -39.0
offset_right = -4.0
offset_bottom = -13.0

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
